--- a/src/sample/completeProfile.fxml
+++ b/src/sample/completeProfile.fxml
@@ -7,146 +7,119 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-          xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="sample.completeProfileController">
-   <columnConstraints>
-      <ColumnConstraints hgrow="ALWAYS"/>
-      <ColumnConstraints hgrow="SOMETIMES"/>
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES"/>
-      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-      <RowConstraints vgrow="SOMETIMES"/>
-   </rowConstraints>
-   <Label text="WELCOME">
-      <font>
-         <Font size="18.0"/>
-      </font>
-      <GridPane.margin>
-         <Insets left="30.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label fx:id="NameUser" layoutX="10.0" layoutY="29.0" text="userName">
-      <font>
-         <Font size="18.0"/>
-      </font>
-      <GridPane.margin>
-         <Insets left="130.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label text="Complete your Profile" GridPane.rowIndex="1">
-      <font>
-         <Font size="18.0"/>
-      </font>
-      <GridPane.margin>
-         <Insets left="30.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label text="User ID">
-      <font>
-         <Font size="18.0"/>
-      </font>
-      <GridPane.margin>
-         <Insets left="300.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label fx:id="UID" text="UID">
-      <GridPane.margin>
-         <Insets left="380.0"/>
-      </GridPane.margin>
-      <font>
-         <Font size="18.0"/>
-      </font>
-   </Label>
-   <Label text="Gender" GridPane.rowIndex="3">
-      <GridPane.margin>
-         <Insets left="110.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label text="Designation" GridPane.rowIndex="4">
-      <GridPane.margin>
-         <Insets left="80.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label text="Mobile Number" GridPane.rowIndex="5">
-      <GridPane.margin>
-         <Insets left="60.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label text="Secondary email" GridPane.rowIndex="6">
-      <GridPane.margin>
-         <Insets left="50.0"/>
-      </GridPane.margin>
-   </Label>
-   <Label prefHeight="20.0" prefWidth="53.0" text="Address" GridPane.rowIndex="7">
-      <GridPane.margin>
-         <Insets left="105.0"/>
-      </GridPane.margin>
-   </Label>
-   <TextField fx:id="Designation" maxWidth="200.0" GridPane.rowIndex="4">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-   </TextField>
-   <TextField fx:id="phNo" maxWidth="200.0" GridPane.rowIndex="5">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-   </TextField>
-   <TextField fx:id="secEmail" maxWidth="200.0" GridPane.rowIndex="6">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-   </TextField>
-   <TextField fx:id="Address" maxWidth="200.0" prefHeight="26.0" prefWidth="279.0" GridPane.rowIndex="7">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-   </TextField>
-   <Button fx:id="three_submit" mnemonicParsing="false" onAction="#CompleteSubmit" text="Submit"
-           GridPane.columnIndex="1" GridPane.rowIndex="7">
-      <GridPane.margin>
-         <Insets left="30.0" right="30.0"/>
-      </GridPane.margin>
-   </Button>
-   <Button fx:id="three_skip" mnemonicParsing="false" onAction="#SkipCom" prefHeight="26.0" prefWidth="64.0" text="Skip"
-           GridPane.columnIndex="1" GridPane.rowIndex="8">
-      <GridPane.margin>
-         <Insets left="30.0" right="30.0"/>
-      </GridPane.margin>
-   </Button>
-   <ComboBox fx:id="gendr" prefWidth="150.0" GridPane.rowIndex="3">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-      <items>
-         <FXCollections fx:factory="observableArrayList">
-            <String fx:value="MALE"/>
-            <String fx:value="FEMALE"/>
-            <String fx:value=""/>
-         </FXCollections>
-      </items>
-   </ComboBox>
-   <Label text="YOU CAN SKIP AND CONTINUE LATER" GridPane.rowIndex="8">
-      <GridPane.margin>
-         <Insets left="200.0"/>
-      </GridPane.margin>
-   </Label>
-   <Button fx:id="three_refresh" mnemonicParsing="false" onAction="#refresh" text="Refresh" GridPane.columnIndex="1">
-      <GridPane.margin>
-         <Insets left="30.0"/>
-      </GridPane.margin>
-   </Button>
-</GridPane>
+<StackPane prefHeight="600.0" prefWidth="800.0" stylesheets="@Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.completeProfileController">
+   <children>
+      <Label text="WELCOME" StackPane.alignment="TOP_LEFT">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <StackPane.margin>
+            <Insets left="20.0" top="20.0" />
+         </StackPane.margin>
+      </Label>
+      <Label fx:id="NameUser" text="userName" StackPane.alignment="TOP_LEFT">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <StackPane.margin>
+            <Insets left="130.0" top="20.0" />
+         </StackPane.margin>
+      </Label>
+      <Label text="COMPLETE YOUR PROFILE" StackPane.alignment="TOP_CENTER">
+         <font>
+            <Font size="29.0" />
+         </font>
+         <StackPane.margin>
+            <Insets top="100.0" />
+         </StackPane.margin>
+         <effect>
+            <Reflection topOpacity="0.11" />
+         </effect>
+      </Label>
+      <Label text="User ID" StackPane.alignment="TOP_RIGHT">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <StackPane.margin>
+            <Insets right="120.0" top="20.0" />
+         </StackPane.margin>
+      </Label>
+      <Label fx:id="UID" text="ADM1001" StackPane.alignment="TOP_RIGHT">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <StackPane.margin>
+            <Insets right="20.0" top="20.0" />
+         </StackPane.margin>
+      </Label>
+      <Label text="Gender">
+         <StackPane.margin>
+            <Insets bottom="200.0" right="300.0" />
+         </StackPane.margin>
+      </Label>
+      <Label prefHeight="16.0" prefWidth="109.0" text="Designation">
+         <StackPane.margin>
+            <Insets bottom="100.0" right="300.0" />
+         </StackPane.margin>
+      </Label>
+      <Label prefHeight="16.0" prefWidth="102.0" text="Mobile Number">
+         <StackPane.margin>
+            <Insets right="350.0" top="100.0" />
+         </StackPane.margin>
+      </Label>
+      <Label prefHeight="16.0" prefWidth="123.0" text="Secondary email">
+         <StackPane.margin>
+            <Insets right="350.0" />
+         </StackPane.margin>
+      </Label>
+      <Label prefHeight="20.0" prefWidth="67.0" text="Address">
+         <StackPane.margin>
+            <Insets right="300.0" top="200.0" />
+         </StackPane.margin>
+      </Label>
+      <ComboBox fx:id="gendr" editable="true" prefWidth="200.0">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="MALE" />
+               <String fx:value="FEMALE" />
+            </FXCollections>
+         </items>
+         <StackPane.margin>
+            <Insets bottom="200.0" />
+         </StackPane.margin>
+      </ComboBox>
+      <TextField fx:id="Designation" maxWidth="200.0">
+         <StackPane.margin>
+            <Insets bottom="100.0" />
+         </StackPane.margin>
+      </TextField>
+      <TextField fx:id="secEmail" maxWidth="200.0">
+         <StackPane.margin>
+            <Insets />
+         </StackPane.margin>
+      </TextField>
+      <TextField fx:id="phNo" maxWidth="200.0">
+         <StackPane.margin>
+            <Insets top="100.0" />
+         </StackPane.margin>
+      </TextField>
+      <TextField fx:id="Address" maxWidth="200.0" prefHeight="26.0" prefWidth="279.0">
+         <StackPane.margin>
+            <Insets top="200.0" />
+         </StackPane.margin>
+      </TextField>
+      <Button fx:id="submitBTN" mnemonicParsing="false" onAction="#CompleteSubmit" prefWidth="200.0" text="Submit">
+         <effect>
+            <DropShadow />
+         </effect>
+         <StackPane.margin>
+            <Insets top="300.0" />
+         </StackPane.margin>
+      </Button>
+   </children>
+</StackPane>
