--- a/src/sample/DOC/dashboard.fxml
+++ b/src/sample/DOC/dashboard.fxml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DOC.dashboardController">
-   <Label text="dashboard" />
-   <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+
+<StackPane prefHeight="600.0" prefWidth="800.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DOC.dashboardController">
+   <StackPane fx:id="navbarStackpane" maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" stylesheets="@../Styles/navbar.css" StackPane.alignment="TOP_CENTER">
       <Button fx:id="patientsAndScansBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callPatientsAndScans" text="Patients &amp; scans" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="190.0" top="7.0" />
+            <Insets left="190.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="dashboardBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callDashboard" text="DashBoard" StackPane.alignment="TOP_LEFT">
+      <Button fx:id="dashboardBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callDashboard" prefHeight="40.0" prefWidth="78.0" text="DashBoard" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="110.0" top="7.0" />
+            <Insets left="110.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/logoutDark.png" />
@@ -35,7 +39,7 @@
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets right="15.0" top="7.0" />
+            <Insets />
          </StackPane.margin>
       </Button>
       <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" StackPane.alignment="TOP_LEFT">
@@ -49,7 +53,7 @@
             <Insets top="11.0" />
          </StackPane.margin>
       </Label>
-      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="10.0" />
          </font>
@@ -59,10 +63,10 @@
             </ImageView>
          </graphic>
          <StackPane.margin>
-            <Insets right="55.0" top="7.0" />
+            <Insets right="40.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/notificationDark.png" />
@@ -72,10 +76,10 @@
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="95.0" top="7.0" />
+            <Insets right="80.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="40.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/chatDark.png" />
@@ -85,84 +89,102 @@
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="135.0" top="7.0" />
+            <Insets right="120.0" />
          </StackPane.margin>
       </Button>
    </StackPane>
    <StackPane>
       <StackPane.margin>
-         <Insets top="40.0"/>
+         <Insets top="40.0" />
       </StackPane.margin>
-      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;"
-                 StackPane.alignment="TOP_CENTER">
+      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
-            <Insets left="20.0" right="20.0" top="20.0"/>
+            <Insets left="20.0" right="20.0" top="20.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
-         <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL              : "
-                textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL              : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="60.0"/>
+               <Insets left="195.0" top="60.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" style="-fx-text-fill: black;" text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="95.0"/>
+               <Insets left="195.0" top="95.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" style="-fx-text-fill: black;" text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="130.0"/>
+               <Insets left="195.0" top="130.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0"
-                style="-fx-text-fill: black;" text="DESIGNATIION : " textAlignment="CENTER"
-                StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0" style="-fx-text-fill: black;" text="DESIGNATIION : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="25.0"/>
+               <Insets left="195.0" top="25.0" />
             </StackPane.margin>
          </Label>
-         <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;"
-                     StackPane.alignment="TOP_LEFT">
+         <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets/>
+               <Insets />
             </StackPane.margin>
-            <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0"
-                       pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0"
-                       AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
-               <Image url="@../Assets/user.jpeg"/>
+            <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+               <Image url="@../Assets/user.jpeg" />
             </ImageView>
-            <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0"
-                   style="-fx-text-fill: black;" text="Name" textAlignment="CENTER"/>
-            <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0"
-                   prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER"/>
+            <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Name" textAlignment="CENTER" />
+            <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER" />
          </AnchorPane>
-         <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="25.0"/>
+               <Insets left="310.0" top="25.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="60.0"/>
+               <Insets left="310.0" top="60.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" style="-fx-text-fill: black;" text="l"
-                textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="95.0"/>
+               <Insets left="310.0" top="95.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="130.0"/>
+               <Insets left="310.0" top="130.0" />
+            </StackPane.margin>
+         </Label>
+      </StackPane>
+      <StackPane style="-fx-background-color: #c557d7;" StackPane.alignment="TOP_LEFT">
+         <StackPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="220.0" />
+         </StackPane.margin>
+         <Label style="-fx-text-fill: black;" text="TODAY" StackPane.alignment="TOP_CENTER">
+            <effect>
+               <Glow />
+            </effect>
+            <StackPane.margin>
+               <Insets top="20.0" />
+            </StackPane.margin>
+         </Label>
+         <Label style="-fx-text-fill: black;" text="Appointments" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets top="40.0" />
+            </StackPane.margin>
+         </Label>
+         <Label style="-fx-text-fill: black;" text="Remaining" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets top="60.0" />
+            </StackPane.margin>
+         </Label>
+         <Label fx:id="todaysAppointmentsTxt" style="-fx-text-fill: black;" text="0" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets left="120.0" top="40.0" />
+            </StackPane.margin>
+         </Label>
+         <Label fx:id="todaysRemainingAppsTxt" style="-fx-text-fill: black;" text="0" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets left="120.0" top="60.0" />
             </StackPane.margin>
          </Label>
       </StackPane>
