--- a/src/sample/Styles/navbar.css
+++ b/src/sample/Styles/navbar.css
@@ -1,11 +1,13 @@
 #navbarStackpane{
     -fx-background-color: #323232;
+    -fx-min-height: 41;
 }
 
 .button{
     -fx-background-color: #323232;
     -fx-min-height: 40px;
     -fx-max-height: 40px;
+    -fx-effect: none;
 
 
 }
