--- a/src/sample/ADM/addUser.fxml
+++ b/src/sample/ADM/addUser.fxml
@@ -71,7 +71,7 @@
                 <String fx:value="Admin" />
                 <String fx:value="Receptionist" />
                 <String fx:value="Doctor" />
-                <String fx:value="Lab technician" />
+                <String fx:value="Lab Technician" />
                 <String fx:value="Medical Storekeeper" />
             </FXCollections>
         </items>
