--- a/src/sample/ADM/dashboard.fxml
+++ b/src/sample/ADM/dashboard.fxml
@@ -100,149 +100,124 @@
          <DropShadow />
       </effect>
    </StackPane>
-   <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0"
-              stylesheets="@../Styles/style3.css">
+   <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" stylesheets="@../Styles/style3.css">
       <StackPane.margin>
-         <Insets top="40.0"/>
+         <Insets top="40.0" />
       </StackPane.margin>
-      <HBox maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+      <HBox maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" stylesheets="@../Styles/style3.css" StackPane.alignment="CENTER">
          <StackPane.margin>
-            <Insets bottom="40.0" left="20.0" right="20.0" top="200.0"/>
+            <Insets bottom="40.0" left="20.0" right="20.0" top="220.0" />
          </StackPane.margin>
-         <BarChart fx:id="patientsBarChart" maxWidth="1.7976931348623157E308"
-                   style="-fx-border-color: blue; -fx-background-color: #365abf;" stylesheets="@../Styles/style4.css"
-                   title="Patients Visits">
+         <BarChart fx:id="patientsBarChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: #365abf;" stylesheets="@../Styles/style4.css" title="Patients Visits" HBox.hgrow="ALWAYS">
             <xAxis>
-               <CategoryAxis fx:id="barX" side="BOTTOM"/>
+               <CategoryAxis fx:id="barX" side="BOTTOM" tickLabelFill="WHITE" />
             </xAxis>
             <yAxis>
-               <NumberAxis fx:id="barY" side="LEFT"/>
+               <NumberAxis fx:id="barY" side="LEFT" tickLabelFill="WHITE" />
             </yAxis>
             <HBox.margin>
-               <Insets right="20.0" top="20.0"/>
+               <Insets right="20.0" />
             </HBox.margin>
             <effect>
-               <DropShadow/>
+               <DropShadow />
             </effect>
          </BarChart>
-         <PieChart fx:id="genderPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   style="-fx-border-color: blue; -fx-background-color: #f1e93d;" stylesheets="@../Styles/style4.css"
-                   title="Patients Ratio (Gender)">
+         <PieChart fx:id="genderPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: #f1e93d;" stylesheets="@../Styles/style4.css" title="Patients Ratio (Gender)" HBox.hgrow="ALWAYS">
             <HBox.margin>
-               <Insets right="20.0" top="20.0"/>
+               <Insets right="20.0" />
             </HBox.margin>
             <effect>
-               <DropShadow/>
+               <DropShadow />
             </effect>
          </PieChart>
-         <PieChart fx:id="ratioPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   style="-fx-border-color: blue; -fx-background-color: #fd6565;" stylesheets="@../Styles/style4.css"
-                   title="Patients Ratio (Age Group)">
+         <PieChart fx:id="ratioPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: #fd6565;" stylesheets="@../Styles/style4.css" title="Patients Ratio (Age Group)" HBox.hgrow="ALWAYS">
             <HBox.margin>
-               <Insets top="20.0"/>
+               <Insets />
             </HBox.margin>
             <effect>
-               <DropShadow/>
+               <DropShadow />
             </effect>
          </PieChart>
       </HBox>
-      <Button fx:id="yearlyBTN" mnemonicParsing="false" onAction="#callAllTime" style="-fx-background-color: #3b3b3b;"
-              text="ALL TIME" StackPane.alignment="BOTTOM_LEFT">
+      <Button fx:id="yearlyBTN" mnemonicParsing="false" onAction="#callAllTime" style="-fx-background-color: #3b3b3b;" text="ALL TIME" StackPane.alignment="BOTTOM_LEFT">
          <StackPane.margin>
-            <Insets bottom="10.0" left="20.0"/>
+            <Insets bottom="10.0" left="20.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
       </Button>
-      <Button fx:id="monthlyBTN" layoutX="30.0" layoutY="537.0" mnemonicParsing="false" onAction="#callYearly"
-              style="-fx-background-color: #3b3b3b;" text="YEAR" StackPane.alignment="BOTTOM_LEFT">
+      <Button fx:id="monthlyBTN" layoutX="30.0" layoutY="537.0" mnemonicParsing="false" onAction="#callYearly" style="-fx-background-color: #3b3b3b;" text="YEAR" StackPane.alignment="BOTTOM_LEFT">
          <StackPane.margin>
-            <Insets bottom="10.0" left="115.0"/>
+            <Insets bottom="10.0" left="115.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
       </Button>
-      <Button fx:id="weaklyBTN" layoutX="105.0" layoutY="537.0" mnemonicParsing="false" onAction="#callMonthly"
-              style="-fx-background-color: #3b3b3b;" text="MONTH" StackPane.alignment="BOTTOM_LEFT">
+      <Button fx:id="weaklyBTN" layoutX="105.0" layoutY="537.0" mnemonicParsing="false" onAction="#callMonthly" style="-fx-background-color: #3b3b3b;" text="MONTH" StackPane.alignment="BOTTOM_LEFT">
          <StackPane.margin>
-            <Insets bottom="10.0" left="185.0"/>
+            <Insets bottom="10.0" left="185.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
       </Button>
-      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;"
-                 StackPane.alignment="TOP_CENTER">
+      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
-            <Insets left="20.0" right="20.0" top="20.0"/>
+            <Insets left="20.0" right="20.0" top="20.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
-         <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL              : "
-                textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL              : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="60.0"/>
+               <Insets left="195.0" top="60.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" style="-fx-text-fill: black;" text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="95.0"/>
+               <Insets left="195.0" top="95.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" style="-fx-text-fill: black;" text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="130.0"/>
+               <Insets left="195.0" top="130.0" />
             </StackPane.margin>
          </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0"
-                style="-fx-text-fill: black;" text="DESIGNATIION : " textAlignment="CENTER"
-                StackPane.alignment="TOP_LEFT">
+         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0" style="-fx-text-fill: black;" text="DESIGNATIION : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="195.0" top="25.0"/>
+               <Insets left="195.0" top="25.0" />
             </StackPane.margin>
          </Label>
-         <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;"
-                     StackPane.alignment="TOP_LEFT">
+         <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets/>
+               <Insets />
             </StackPane.margin>
-            <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0"
-                       pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0"
-                       AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
-               <Image url="@../Assets/user.jpeg"/>
+            <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+               <Image url="@../Assets/user.jpeg" />
             </ImageView>
-            <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0"
-                   style="-fx-text-fill: black;" text="Name" textAlignment="CENTER"/>
-            <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0"
-                   prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER"/>
+            <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Name" textAlignment="CENTER" />
+            <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER" />
          </AnchorPane>
-         <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0"
-                style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="25.0"/>
+               <Insets left="310.0" top="25.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="60.0"/>
+               <Insets left="310.0" top="60.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="95.0"/>
+               <Insets left="310.0" top="95.0" />
             </StackPane.margin>
          </Label>
-         <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0"
-                style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+         <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
             <StackPane.margin>
-               <Insets left="310.0" top="130.0"/>
+               <Insets left="310.0" top="130.0" />
             </StackPane.margin>
          </Label>
       </StackPane>
