--- a/src/sample/database.fxml
+++ b/src/sample/database.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.Reflection?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.databaseController">
    <Label text="WELCOME TO OSPITALITY" StackPane.alignment="TOP_CENTER">
@@ -78,7 +74,7 @@
          <Insets top="200.0" />
       </StackPane.margin>
    </PasswordField>
-   <Label fx:id="errorLoginTxt" textAlignment="CENTER" textFill="RED">
+   <Label fx:id="errorLoginTxt" style="-fx-text-fill: red;" textAlignment="CENTER">
       <StackPane.margin>
          <Insets top="250.0" />
       </StackPane.margin>
